syntax = "proto3";

package auth;

option go_package = "prrromanssss.daee.v1;daeev1";

service Auth {
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
}

message RegisterRequest {
    string email = 1;  // Email of the user to register.
    string password = 2;  // Password of ther user to register.
}

message RegisterResponse {
    int64 user_id = 1;  // User ID of the registered user.
}

message LoginRequest {
    string email = 1;  // Email of the user to login.
    string password = 2;  // Password of ther user to login.
}

message LoginResponse {
    string token = 1;  // ID token of the logged user.
}